Issue #INT-456 by cfuller: removed Force Download All option from actions dropdown. Option now exists as a new global button on the config page, but it's hidden by a "More Options" button. This makes it accessible, but not immediately available for the average user. Additional options can also be hidden by the More Options button to avoid clutter in the future.

--- a/style/base.css
+++ b/style/base.css
@@ -228,7 +228,16 @@ a:hover.tooltips span {
     color: green;
     font-size: 150%;
 }
-
+.ltk-options {
+  padding-top: 5px;
+  cursor: pointer;
+  margin-left: 15px;
+}
+.ltk-force-down {
+  position:relative;
+  padding-top: 3px;
+  font-size: 100%;
+}
 .ltk-upload {
     color: #444;
 }
